# varve

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  architecture.html  backends.html  docker-compose.yml  getting-started.html  introduction.html  justfile  print.html  searcher-09f2665d.js  searchindex-413e4ee5.js  searchindex-b7ef6f64.js  searchindex-e97f12ed.js  security.html  toc-34f337a1.js  toc-47ba109b.js  toc.html
.github/workflows/: ci.yml  release.yml
crates/varve/: Cargo.toml
crates/varve-cli/: Cargo.toml
crates/varve-cli/src/: admin.rs  cli.rs  client.rs  embedded.rs  lib.rs  main.rs  output.rs  remote.rs  shell.rs  transfer.rs
crates/varve-cli/tests/: admin.rs  cli_help.rs  client.rs  remote.rs  shell.rs  transfer.rs
crates/varve-config/: Cargo.toml
crates/varve-config/src/: byte_size.rs  config.rs  lib.rs  registry.rs
crates/varve-config/tests/: config_test.rs  registry_test.rs
crates/varve-engine/: Cargo.toml
crates/varve-engine/src/: clock.rs  compact.rs  const_eval.rs  db.rs  flush.rs  follower.rs  gc.rs  lib.rs  metrics.rs  node.rs  registries.rs  replay.rs  scan.rs  security.rs  state.rs  verify.rs  writer.rs
crates/varve-engine/src/coord/: cas.rs  designated.rs  fence.rs  mod.rs
crates/varve-engine/tests/: admin.rs  concurrency.rs  coordination.rs  failover.rs  fenced_recovery.rs  mutations.rs  query_node.rs  tracing_spans.rs
crates/varve-engine/tests/common/: mod.rs
crates/varve-gql/: Cargo.toml
crates/varve-gql/benches/: parse.rs
crates/varve-gql/src/: ast.rs  lib.rs  parser.rs  print.rs  token.rs
crates/varve-gql/tests/: print_roundtrip.rs
crates/varve-index/: Cargo.toml
crates/varve-index/benches/: resolution.rs
crates/varve-index/src/: bitemporal.rs  block.rs  codec.rs  event.rs  lib.rs  live.rs  scan.rs
crates/varve-index/tests/: block_trie_meta.rs
crates/varve-log/: Cargo.toml
crates/varve-log/src/: lib.rs  local.rs  log.rs  memory.rs  object_store.rs  record.rs
crates/varve-log/tests/: local_log.rs  memory_log.rs  object_store_log.rs  recovery.rs  trim.rs
crates/varve-plan/: Cargo.toml
crates/varve-plan/src/: exec.rs  expand.rs  expr.rs  functions.rs  lib.rs  pattern.rs
crates/varve-plan/tests/: exec_test.rs
crates/varve-server/: Cargo.toml
crates/varve-server/src/: api.rs  auth.rs  error.rs  frontend.rs  lib.rs  metrics.rs
crates/varve-server/src/http/: encoding.rs  handlers.rs  mod.rs
crates/varve-server/src/metrics/: mod.rs  otlp.rs
crates/varve-server/tests/: api.rs  arrow_stream.rs  auth.rs  frontend.rs  http_api.rs  metrics.rs  otlp.rs  process_consistency.rs  process_scale_out.rs  scale_out_bench.rs  tls.rs
crates/varve-server/tests/fixtures/: tls-cert.pem  tls-key.pem
crates/varve-server/tests/support/: process_cluster.rs
crates/varve-storage/: Cargo.toml
crates/varve-storage/src/: cache.rs  catalog.rs  disk.rs  keys.rs  lib.rs  local.rs  manifest.rs  memory.rs  probe.rs  s3.rs  store.rs
crates/varve-storage/tests/: store_test.rs  trie_catalog_test.rs  trie_key_test.rs
crates/varve-testkit/: Cargo.toml
crates/varve-testkit/src/: backends.rs  config_reference.rs  db_harness.rs  fixture.rs  lib.rs  oracle.rs  reference.rs  strategy.rs
crates/varve-testkit/src/tck/: gherkin.rs  mod.rs  runner.rs  translate.rs  values.rs
crates/varve-testkit/tests/: backend_matrix.rs  cas_failover_backends.rs  chaos.rs  compaction_equivalence.rs  config_reference_doc.rs  crash_recovery.rs  equivalence.rs  flush_equivalence.rs  gql_corpus.rs  social_graph.rs  tck.rs  tck_gherkin.rs  tck_values.rs  traversal_oracle.rs
crates/varve-types/: Cargo.toml
crates/varve-types/benches/: trie.rs
crates/varve-types/src/: iid.rs  lib.rs  position.rs  temporal.rs  trie.rs  value.rs
crates/varve/examples/: block_bench.rs  cache_bench.rs  compaction_gc.rs  failover.rs  gql_tour.rs  hello.rs  object_store_tx_bench.rs  social_bench.rs  time_travel.rs  traversal_bench.rs  write_bench.rs
crates/varve/src/: lib.rs  rows.rs
crates/varve/tests/: anchored_node_pruning.rs  benchmark_contract.rs  blocks.rs  cache_tiers.rs  catalog.rs  compaction.rs  detach_delete.rs  durability.rs  erase.rs  exists.rs  expressions.rs  functions.rs  gc.rs  gdpr_gc.rs  ingest.rs  labels.rs  mutation_patterns.rs  object_log.rs  params.rs  pipeline.rs  programs.rs  return_shapes.rs  rows.rs  security.rs  set_remove.rs  temporal.rs  traversal.rs  walking_skeleton.rs
deploy/: Dockerfile.garage-init  garage-init.sh  garage.toml  varve-query.toml  varve-writer.toml
docs/benchmarks/: v1.md
docs/book/: book.toml
docs/design/: 2026-07-04-varve-design.md
docs/ops/: metrics.md
docs/plans/: 2026-07-04-slice-00-foundation.md  2026-07-04-slice-01-walking-skeleton.md  2026-07-04-slice-02-bitemporal-core.md  2026-07-04-slice-03-durability.md  2026-07-05-slice-04-blocks.md  2026-07-05-slice-05-s3-backends.md  2026-07-05-slice-06-edges-traversal.md  2026-07-06-slice-07-gql-completion.md  2026-07-06-slice-08-compaction-tries-gc.md  2026-07-10-slice-09-server-cli-query-node-role.md  2026-07-11-slice-10-coordination-failover-backpressure-observability.md  2026-07-12-slice-11-ship-gdpr-fuzz-bench-docs-release.md  PROMPTS.md  STATUS.md  varve-v1-roadmap.md
docs/release/: v1-acceptance.md
explore/: .env.example  .gitignore  .oxfmtrc.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  components.json  oxlint.json  package.json  pnpm-lock.yaml  varve.dev.toml  vite.config.ts
explore/src/: app.css  app.d.ts  hooks.server.test.ts  hooks.server.ts
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/parse/: mutations.gql  program.gql  temporal.gql
fuzz/fuzz_targets/: block_meta.rs  events.rs  log_record.rs  manifest.rs  parse.rs
gql/: deviations.html  reference.html  temporal.html
ops/: configuration.html  failover.html  index.html  metrics.html  profiles.html
reference/: cli.html  http-api.html
resources/gql-corpus/: basic-match.gql  corpus.expected  dangling-return.gql  detach-delete-person.gql  (+9 more)
scripts/: compose_demo.sh  package_release.sh  test_ci.py  varve_benchmark_run.sh
(+98 files in other folders)
