[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ravan/varve"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
