[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ravan/varve"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
datafusion = "54"
arrow = "58"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
proptest = "1"
prost = "0.14"
crc32c = "0.6"
tempfile = "3"
object_store = "0.13"
bytes = "1"
futures = "0.3"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
