[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ravan/varve"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
datafusion = "54"
arrow = { version = "58", features = ["prettyprint"] }
arrow-json = "58"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net"] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
proptest = "1"
prost = "0.14"
crc32c = "0.6"
tempfile = "3"
object_store = "0.13"
bytes = "1"
futures = "0.3"
prometheus = "0.14"
subtle = "2.6"
axum = "0.8"
axum-server = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio-stream = "0.1"
tower = "0.5"
http-body-util = "0.1"
rustyline = "18"
criterion = "0.7"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
