[package]
name = "varve-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
varve-gql = { path = "../crates/varve-gql" }
varve-log = { path = "../crates/varve-log", default-features = false }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "log_record"
path = "fuzz_targets/log_record.rs"
test = false
doc = false
bench = false
