[package]
name = "varve-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Layered TOML configuration and component registry for Varve, the bitemporal graph database."

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serial_test = "3"
tempfile = { workspace = true }

[lints]
workspace = true
