[package]
name = "varve-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
varve-types = { path = "../varve-types" }
varve-gql = { path = "../varve-gql" }
varve-index = { path = "../varve-index" }
varve-plan = { path = "../varve-plan" }
varve-log = { path = "../varve-log" }
varve-config = { path = "../varve-config" }
varve-storage = { path = "../varve-storage" }
datafusion = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }

[features]
# Test-only crash hooks for the varve-testkit kill -9 harness (mirrors
# varve-log's). Inert unless VARVE_CRASH_TRIGGER points at an armed file.
fault-injection = []

[lints]
workspace = true
