[package]
name = "varve-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
varve-types = { path = "../varve-types" }
varve-gql = { path = "../varve-gql" }
varve-index = { path = "../varve-index" }
varve-plan = { path = "../varve-plan" }
varve-log = { path = "../varve-log" }
varve-config = { path = "../varve-config" }
varve-storage = { path = "../varve-storage" }
datafusion = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
xxhash-rust = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["cas-failover"]
# Test-only crash hooks for the varve-testkit kill -9 harness (mirrors
# varve-log's). Inert unless VARVE_CRASH_TRIGGER points at an armed file.
fault-injection = []
# The cas-failover coordinator (spec §12, D5/D7): CAS-lease-based writer
# failover with epoch fencing. Opt-in per backend (capability-probed at
# startup); default on since every builtin backend either supports it or
# refuses cleanly naming the missing capability.
cas-failover = []

[lints]
workspace = true
