[package]
name = "varve-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bitemporal storage engine, writer loop, compaction/GC, and failover coordination for Varve, the bitemporal graph database."

[dependencies]
varve-types = { path = "../varve-types", version = "1.0.0" }
varve-gql = { path = "../varve-gql", version = "1.0.0" }
varve-index = { path = "../varve-index", version = "1.0.0" }
varve-plan = { path = "../varve-plan", version = "1.0.0" }
varve-log = { path = "../varve-log", version = "1.0.0" }
varve-config = { path = "../varve-config", version = "1.0.0" }
varve-storage = { path = "../varve-storage", version = "1.0.0" }
datafusion = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
xxhash-rust = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["cas-failover"]
# Test-only crash hooks for the varve-testkit kill -9 harness (mirrors
# varve-log's). Inert unless VARVE_CRASH_TRIGGER points at an armed file.
fault-injection = []
# The cas-failover coordinator (spec §12, D5/D7): CAS-lease-based writer
# failover with epoch fencing. Opt-in per backend (capability-probed at
# startup); default on since every builtin backend either supports it or
# refuses cleanly naming the missing capability.
cas-failover = []

[lints]
workspace = true
