[package]
name = "varve-gql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
varve-types = { path = "../varve-types" }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "parse"
harness = false
