[package]
name = "varve-gql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GQL parser and abstract syntax tree for Varve, the bitemporal graph database."

[dependencies]
thiserror = { workspace = true }
varve-types = { path = "../varve-types", version = "1.0.0" }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "parse"
harness = false
