[package]
name = "varve-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
varve-types = { path = "../varve-types" }
varve-storage = { path = "../varve-storage", default-features = false }
arrow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
