[package]
name = "varve-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
varve-types = { path = "../varve-types" }
arrow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "resolution"
harness = false
