[package]
name = "varve-plan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
varve-gql = { path = "../varve-gql" }
varve-index = { path = "../varve-index" }
varve-types = { path = "../varve-types" }
datafusion = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
arrow = { workspace = true }

[lints]
workspace = true
