[package]
name = "varve-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP server (the varved binary) for Varve, the bitemporal graph database."

[features]
default = ["http", "tls", "otel"]
http = ["dep:axum-server", "dep:url"]
tls = ["http", "dep:rustls", "axum-server/tls-rustls-no-provider"]
otel = ["dep:reqwest"]

[[bin]]
name = "varved"
path = "src/bin/varved.rs"
required-features = ["http"]

[dependencies]
varve = { path = "../varve", version = "1.0.0" }
varve-engine = { path = "../varve-engine", version = "1.0.0" }
varve-types = { path = "../varve-types", version = "1.0.0" }
varve-config = { path = "../varve-config", version = "1.0.0" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
arrow = { workspace = true }
arrow-json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
prometheus = { workspace = true }
subtle = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
url = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
datafusion = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
tempfile = { workspace = true }
varve-log = { path = "../varve-log" }
# `varve-testkit` transitively enables the `fault-injection` feature of
# `varve-log`/`varve-engine` for THIS test build only (cargo feature
# unification). Those crash hooks stay inert unless `VARVE_CRASH_TRIGGER`
# names an armed trigger file, so the server tests are unaffected. If this
# crate ever ships fault-injection in a non-test build, isolate the fixture.
varve-testkit = { path = "../varve-testkit" }
reqwest = { workspace = true }

[lints]
workspace = true
