[package]
name = "varve-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
varve-config = { path = "../varve-config" }
object_store = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
