[package]
name = "varve-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Any S3-API endpoint (AWS, Garage, Ceph RGW, SeaweedFS, MinIO). Default-on:
# it is a v1 success criterion; embedders may disable default features for a
# local-only build.
default = ["s3"]
s3 = ["object_store/aws"]

[dependencies]
varve-config = { path = "../varve-config" }
object_store = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
