[package]
name = "varve-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proptest = { workspace = true }
varve-index = { path = "../varve-index" }
varve-types = { path = "../varve-types" }
varve = { path = "../varve" }
varve-log = { path = "../varve-log", features = ["fault-injection"] }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
arrow = { workspace = true }

[lints]
workspace = true
