[package]
name = "varve-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proptest = { workspace = true }
varve-index = { path = "../varve-index" }
varve-types = { path = "../varve-types" }
varve = { path = "../varve" }
varve-log = { path = "../varve-log", features = ["fault-injection"] }
# fault-injection features unify workspace-wide through these deps (slice-3
# pattern); varve-engine is listed for its feature alone.
varve-engine = { path = "../varve-engine", features = ["fault-injection"] }
varve-storage = { path = "../varve-storage" }
varve-config = { path = "../varve-config" }
tokio = { workspace = true }
# backends.rs is library code (not test-only) that shells out to docker and
# needs scratch config directories, so tempfile lives here, not dev-deps.
tempfile = { workspace = true }
# oracle.rs (library code) renders grid µs into the RFC3339 timestamps the GQL
# VALID FROM / AS OF clauses parse, so chrono is a normal dep, not dev-only.
chrono = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
bytes = { workspace = true }
# varve-plan gives the pure expand_paths layer for the pure equivalence property.
varve-plan = { path = "../varve-plan" }

[lints]
workspace = true
