[package]
name = "varve-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "trie"
harness = false
