[package]
name = "varve-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core value, timestamp, and xxh3-128 identifier types for Varve, the bitemporal graph database."

[dependencies]
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "trie"
harness = false
