[package]
name = "varve"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
varve-engine = { path = "../varve-engine" }
varve-types = { path = "../varve-types" }
varve-config = { path = "../varve-config" }
datafusion = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
# traversal_bench.rs (task 11) reuses the deterministic social-graph fixture
# rather than duplicating the LCG generator; dev-only back-edge (varve-testkit
# depends on varve normally) — no cycle, since examples aren't build inputs.
varve-testkit = { path = "../varve-testkit" }

[lints]
workspace = true
