[package]
name = "varve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bitemporal property-graph database speaking GQL — embedded facade."

[dependencies]
varve-engine = { path = "../varve-engine", version = "1.0.0" }
varve-types = { path = "../varve-types", version = "1.0.0" }
varve-config = { path = "../varve-config", version = "1.0.0" }
datafusion = { workspace = true }
arrow-json = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
varve-index = { path = "../varve-index" }
varve-log = { path = "../varve-log" }
varve-storage = { path = "../varve-storage" }
# traversal_bench.rs (task 11) reuses deterministic social-graph fixture
# duplicating LCG generator; dev-only back-edge (varve-testkit
# depends on varve normally) — no cycle, since examples aren't build inputs.
varve-testkit = { path = "../varve-testkit" }

[lints]
workspace = true
